<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetFragment">

    <Button
        android:id="@+id/btn_rapat_baru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rapat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_gabung_rapat"/>

    <Button
        android:id="@+id/btn_gabung_rapat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_gabung_rapat"
        app:layout_constraintStart_toEndOf="@id/btn_rapat_baru"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_meet"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/meet"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rapat_baru"/>

    <TextView
        android:id="@+id/tv_meet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mulai_rapat_baru_atau_dapatkan_link_rapat"
        android:ems="10"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_meet"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_meet_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meet_desc"
        android:ems="16"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meet"/>

</androidx.constraintlayout.widget.ConstraintLayout>